# agisk_client

./: README.md  build.gradle  gradle.properties  settings.gradle  tmp  user_licence.txt
DualBootAndroid/universal/key_solution/: hosttest.sh  key_hide_and_seek.sh
app/: build.gradle
app/release/: output-metadata.json
app/src/debug/res/drawable/: ic_fab_tasksmanager_foreground.xml
app/src/debug/res/values/: ic_fab_tasksmanager_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/Firmware/: update-binary  updater-script
app/src/main/assets/Han.GJZS/: Block_Device_Name.sh
app/src/main/assets/innerConfigFile/: DiskBackupMod.xml  DiskTest.xml  DiskWriteMod.xml  PartDump.xml  PartDumpMod.xml  PartRename_Number_Mod.xml  ResizeTableMod.xml  TableBackupMod.xml  TableRestoreMod.xml  xml_arguments_order.txt
app/src/main/cpp/: Basic.cpp  Basic.h  CMakeLists.txt  DiskActions.cpp  DiskActions.h  MyLog.cpp  MyLog.h  PartitionActions.cpp  PartitionActions.h  SingleTools.cpp  SingleTools.h  Support.cpp  Support.h  atms_app_my_application_c_JNI.h  native-lib.cpp
app/src/main/cpp/agisk/: Action.cpp  Action.hpp  Adjustion.cpp  Adjustion.hpp  CMakeList.txt  Makefile  Utils.cpp  Utils.hpp  agisk  agisk.cpp  command  sda.img
app/src/main/cpp/agisk/gpt/: basicmbr.h  bsd.h  gpt.h  gptcl.h  gptpart.h  guid.h  parttypes.h  popt.h  sgdisk_cl.h  support.h
app/src/main/cpp/agisk/jni/: Android.mk  Application.mk
app/src/main/cpp/agisk/uuid/: all-io.h  c.h  randutils.h  uuid.h  uuidP.h
app/src/main/cpp/des/: b64.cpp  b64.h  encrypt.cpp  encrypt.h  vigenere.cpp  vigenere.h
app/src/main/cpp/include/gpt/: attributes.h  crc32.h  diskio.h  gpt.h  gptcurses.h  gpttext.h  mbr.h  mbrpart.h  support.h
app/src/main/cpp/include/uuid/: all-io.h  uuid.h  uuidd.h
app/src/main/res/anim/: anim_pop.xml  pop_in.xml  pop_out.xml
app/src/main/res/drawable/: add_foreground.xml  bg_round_rect.xml  button_white.xml  copyrights_ic_foreground.xml  download_circled_foreground.xml  file_icon_foreground.xml  ic_add_disabled_foreground.xml  ic_add_foreground.xml  ic_contract_foreground.xml  ic_delete_disabled_foreground.xml  ic_delete_foreground.xml  ic_fab_tasksmanager_foreground.xml  ic_file_foreground.xml  ic_home_foreground.xml  ic_install_button_foreground.xml  ic_install_edit_button_foreground.xml  ic_install_foreground.xml  ic_install_get_button_foreground.xml  ic_install_help_button_foreground.xml  ic_map_foreground.xml  ic_play_disabled_foreground.xml  ic_settings_disabled_foreground.xml  ic_settings_foreground.xml  ic_stop_disabled_foreground.xml  ic_stop_foreground.xml  linearlayout_divider.xml  lock_foreground.xml  part_add_bt_background.xml  part_add_bt_flash.xml  part_delete_bt_background.xml  part_flash_ic_foreground.xml  part_mount_bt_background.xml  part_settings_bt_background.xml  part_umount_bt_background.xml  searchbarbg_white.xml  settings_ic_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  (+26 more)
doc/: xmlMod.md
gradle/wrapper/: gradle-wrapper.properties
xmls/: DiskBackupVdd.xml  DiskFormatVdd.xml  DiskSpare.xml  DiskTest.xml  DiskWriteTest.xml  DiskWriteTestVdd.xml  PartDelete1.xml  PartDelete2.xml  PartDumoVdd.xml  PartDump.xml  PartNew1.xml  PartNew3.xml  SystemExpandEmmc_release.xml  SystemExpandUfs_release.xml  VirtualSdCardEmmc_release.xml  VirtualSdCardUFS_release.xml  apollo_install.xml  xml_argument_map.xml  xml_arguments_order.txt
xmls/Examples/: DiskBackupVdd.xml  DiskFormatVdd_unsafe.xml  DiskSpare.xml  DiskWriteTest_Unsafe.xml  PartDelete_name.xml  PartDelete_number.xml  PartDump.xml  PartNew_no_number.xml  PartNew_number.xml  PartRename_number.xml  PartRename_oldname.xml  ResizeTable.xml
xmls/ReservedTest/: DiskReservedTest.xml  DiskReservedTest1.xml  DiskReservedTest1W.xml  DiskReservedTest2.xml  DiskReservedTest3.xml  DiskReservedTest4.xml
xmls/release/: MountVirtualSd.xml  VirtualSdCardUFS_release.xml
(+145 files in other folders)
